<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
  	

	<item 
		android:id="@+id/menu_tellAFriend"
		android:icon="@android:drawable/ic_menu_share"
		android:title="@string/menu_tellAFriend"
		app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_et_timemaschine"
        android:icon="@drawable/ic_action_timemachine"
        android:title="@string/menu_timemachine"
        app:showAsAction="ifRoom|withText"
        />
    <item android:id="@+id/menu_weekinfo"
        android:icon="@android:drawable/ic_menu_week"
        android:title="@string/menu_weekinfo"
		app:showAsAction="ifRoom|withText" />
   
    <item android:id="@+id/menu_et_date"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_editEt"
        />
        
	<item android:id="@+id/about"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/menu_about"
		/>
	<item 
		android:id="@+id/menu_feedback"
		android:icon="@android:drawable/ic_menu_send"
		android:title="@string/menu_feedback"
		/>
    <item
        android:id="@+id/menu_remove_ads"
        android:title="@string/menu_remove_ads"
        app:showAsAction="never" />
</menu>
