<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="match_parent"
  	android:layout_height="match_parent"
  	android:padding="10dip">
  	<LinearLayout
  		android:orientation="vertical" 
  		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView 
			android:id="@+id/about_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_text"/>  
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_linedelimiter"/>
		<Button 
		    android:id="@+id/about_btn_babyinmom1"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_btn_babyinmon1"
		    />
		<TextView 
		    android:id="@+id/about_babysound_info"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_babysound_info"
		    />
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_linedelimiter"/>
		<TextView 
			android:id="@+id/about_promo_robert"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_promo_robert"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_linedelimiter"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/releasenotes"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_linedelimiter"/>
		<TextView 
			android:id="@+id/about_contact"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_contact"/>							
  	</LinearLayout>
</ScrollView>