<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetCanvas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_shape"
    android:padding="8dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/icon"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widgetTV01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_intro"
            android:textColor="#F3E5F5"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/widgetTV02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_default"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widgetTV03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#F3E5F5"
            android:textSize="13sp" />
    </LinearLayout>
</RelativeLayout>
